force-app/main/default/objects/Book_history__c/Book_history__c.object-meta.xml
<CustomObject>
    <label>Book history</label>
    <nameField>
        <label>Book histories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>