force-app/main/default/objects/Book_history__c/fields/Book_id__c.field-meta.xml
<CustomField>
    <fullName>Book_id__c</fullName>
    <displayFormat>BT-{0000}</displayFormat>
    <label>Book id</label>
    <type>AutoNumber</type>
</CustomField>