force-app/main/default/objects/Book_history__c/fields/Issue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Issue_Amount__c</fullName>
    <label>Issue Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>