force-app/main/default/objects/Book_history__c/fields/Issue_date__c.field-meta.xml
<CustomField>
    <fullName>Issue_date__c</fullName>
    <label>Issue date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>