force-app/main/default/objects/Book_history__c/fields/Return_date__c.field-meta.xml
<CustomField>
    <fullName>Return_date__c</fullName>
    <label>Return date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>